# mermaid-rs-renderer

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  clippy.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  transformer.mmd  transformer2.mmd
.github/scripts/: update-aur.sh  update-homebrew.sh
.github/workflows/: ci.yml  release.yml
benches/: renderer.rs
benches/fixtures/: architecture_medium.mmd  block_medium.mmd  c4_medium.mmd  class_medium.mmd  class_tiny.mmd  er_medium.mmd  flowchart.mmd  flowchart_asymmetric_components.mmd  flowchart_backedges_subgraphs.mmd  flowchart_component_packing.mmd  flowchart_direction_conflict.mmd  flowchart_fanout_returns.mmd  flowchart_flow_direction_backtrack.mmd  flowchart_grid_feedback.mmd  flowchart_label_collision.mmd  flowchart_lanes_crossfeed.mmd  flowchart_large.mmd  flowchart_long_edge_labels.mmd  flowchart_medium.mmd  flowchart_mega_braid_feedback.mmd  flowchart_mega_crosslane_subgraphs.mmd  flowchart_mega_event_mesh.mmd  flowchart_mega_multihub_control.mmd  flowchart_mega_nested_regions.mmd  flowchart_nested_clusters.mmd  flowchart_parallel_edges_bundle.mmd  flowchart_parallel_label_stack.mmd  flowchart_parallel_merges.mmd  flowchart_path_occlusion_maze.mmd  flowchart_port_alignment_matrix.mmd  flowchart_ports_heavy.mmd  flowchart_selfloop_bidi.mmd  flowchart_small.mmd  flowchart_sparse_components.mmd  flowchart_subgraph_boundary_intrusion.mmd  flowchart_weave.mmd  gantt_medium.mmd  gitgraph_medium.mmd  journey_medium.mmd  kanban_medium.mmd  (+16 more)
benches/typical/: class.mmd  state.mmd
docs/: architecture.md  benchmarks.md  comparison.html  comparison_manifest.json  er_design_options.html  flowchart_layout_config.md  issues.html  layout_objective.md  layout_overhaul_plan.md  visual-benchmark-matrix.md
docs/benchmarks/: breakdown.vl.json  comparison.vl.json  library.vl.json
docs/comparison_sources/: architecture_basic.mmd  block_basic.mmd  c4_basic.mmd  c4_container.mmd  class_full.mmd  class_interface.mmd  class_patterns.mmd  class_relations.mmd  er_blog.mmd  er_ecommerce.mmd  er_extended.mmd  flowchart_auth.mmd  flowchart_cicd.mmd  flowchart_cycles.mmd  flowchart_dense.mmd  flowchart_edges.mmd  flowchart_labels.mmd  flowchart_opaque.mmd  flowchart_ports.mmd  flowchart_shapes.mmd  flowchart_td.mmd  gantt_full.mmd  gantt_release.mmd  gantt_sections.mmd  gitgraph_branching.mmd  gitgraph_parallel.mmd  gitgraph_release.mmd  journey_shopping.mmd  journey_team.mmd  kanban_basic.mmd  mindmap_deep.mmd  mindmap_project.mmd  mindmap_shapes.mmd  packet_basic.mmd  pie_multicolor.mmd  pie_segments.mmd  quadrant_basic.mmd  quadrant_strategy.mmd  quadrant_tech.mmd  radar_basic.mmd  (+22 more)
scripts/: bench_batch.py  bench_compare.py  bench_render.py  conformance_compare.py  generate_charts.py  label_bench.py  layout_compare_report.py  layout_diff.py  layout_score.py  priority_bench.py  profile_summary.py  quality_bench.py  quality_gate.py  remote-cargo.sh  render_comparison.py  tune_flowchart.py  update_comparison_meta.py
src/: cli.rs  config.rs  ir.rs  layout.rs  layout_dump.rs  lib.rs  main.rs  parser.rs  render.rs  text_metrics.rs  theme.rs
tests/: layout_suite.rs  quality_baseline.json
wasm/: Cargo.toml  README.md  package.json
wasm/scripts/: postbuild.mjs
wasm/src/: lib.rs
(+105 files in other folders)
