[package]
name = "mermaid-rs-renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json5 = "0.4"
thiserror = "1.0"
once_cell = "1.19"

# Optional PNG rendering via resvg
resvg = "0.46"
usvg = "0.46"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "renderer"
harness = false
