[package]
name = "mermaid-rs-renderer"
version = "0.1.0"
edition = "2024"
description = "Fast Mermaid renderer in Rust (flowchart/class/state/sequence)"
license = "MIT"
readme = "README.md"
repository = "https://github.com/1jehuang/mermaid-rs-renderer"
homepage = "https://github.com/1jehuang/mermaid-rs-renderer"
keywords = ["mermaid", "diagram", "svg", "renderer", "cli"]
categories = ["command-line-utilities", "visualization"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json5 = "0.4"
thiserror = "1.0"
once_cell = "1.19"
dagre_rust = "0.0.5"
graphlib_rust = "0.0.2"
resvg = "0.46"
usvg = "0.46"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "renderer"
harness = false

[[bin]]
name = "mmdr"
path = "src/main.rs"

[patch.crates-io]
dagre_rust = { path = "vendor/dagre_rust" }
