[package]
name = "mermaid-rs-renderer"
version = "0.1.0"
edition = "2024"
description = "Fast Mermaid renderer in Rust (flowchart/class/state/sequence)"
license = "MIT"
readme = "README.md"
repository = "https://github.com/1jehuang/mermaid-rs-renderer"
homepage = "https://github.com/1jehuang/mermaid-rs-renderer"
keywords = ["mermaid", "diagram", "svg", "renderer", "cli"]
categories = ["command-line-utilities", "visualization"]

[features]
default = ["cli", "png"]
# CLI support (adds clap dependency)
cli = ["dep:clap"]
# PNG output support (adds resvg/usvg dependencies)
png = ["dep:resvg", "dep:usvg"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"], optional = true }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json5 = "0.4"
thiserror = "1.0"
once_cell = "1.19"
dagre_rust = "0.0.5"
graphlib_rust = "0.0.4"
resvg = { version = "0.46", optional = true }
usvg = { version = "0.46", optional = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "renderer"
harness = false

[[bin]]
name = "mmdr"
path = "src/main.rs"
required-features = ["cli"]

[patch.crates-io]
dagre_rust = { path = "vendor/dagre_rust" }
